--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,163 +37,7 @@ i18n:
   locales: [pl]
   default_locale: pl
 
-collections:
-  - name: "settings"
-    label: "Ustawienia Ogólne"
-    files:
-      - name: "site"
-        label: "Informacje o Stronie"
-        file: "src/data/site.json"
-        fields:
-          - { label: "Nazwa Strony", name: "title", widget: "string" }
-          - { label: "Opis", name: "description", widget: "text" }
-          - { label: "Email", name: "email", widget: "string" }
-          - { label: "Telefon", name: "phone", widget: "string" }
-          - { label: "Lokalizacja", name: "location", widget: "string" }
-          - { label: "Logo", name: "logo", widget: "image" }
-
-  - name: "navigation"
-    label: "Nawigacja"
-    files:
-      - name: "navigation"
-        label: "Menu Nawigacyjne"
-        file: "src/data/navigation.json"
-        fields:
-          - { label: "Alt Logo", name: "logo_alt", widget: "string" }
-          - { label: "Etykieta Menu Mobilnego", name: "mobile_menu_label", widget: "string" }
-          - label: "Elementy Menu"
-            name: "menu_items"
-            widget: "list"
-            fields:
-              - { label: "Link", name: "href", widget: "string" }
-              - { label: "Etykieta", name: "label", widget: "string" }
-
-  - name: "hero"
-    label: "Sekcja Główna"
-    files:
-      - name: "hero"
-        label: "Sekcja Hero"
-        file: "src/data/hero.json"
-        fields:
-          - { label: "Tytuł Główny", name: "title", widget: "string" }
-          - { label: "Słowo Wyróżnione", name: "accent", widget: "string" }
-          - { label: "Opis", name: "description", widget: "text" }
-          - { label: "Obraz Główny", name: "image", widget: "image" }
-          - { label: "Przycisk Główny", name: "button_primary", widget: "string" }
-          - { label: "Przycisk Drugorzędny", name: "button_secondary", widget: "string" }
-
-  - name: "about"
-    label: "O Mnie"
-    files:
-      - name: "about"
-        label: "Informacje Osobiste"
-        file: "src/data/about.json"
-        fields:
-          - { label: "Tytuł", name: "title", widget: "string" }
-          - { label: "Podtytuł", name: "subtitle", widget: "string" }
-          - { label: "Opis 1", name: "description1", widget: "text" }
-          - { label: "Opis 2", name: "description2", widget: "text" }
-          - { label: "Lata Doświadczenia", name: "experience", widget: "number" }
-          - { label: "Obraz", name: "image", widget: "image" }
-          - { label: "Tekst Przycisku", name: "button_text", widget: "string" }
-          - label: "Umiejętności"
-            name: "skills"
-            widget: "list"
-            fields:
-              - { label: "Ikona", name: "icon", widget: "string" }
-              - { label: "Tytuł", name: "title", widget: "string" }
-              - { label: "Opis", name: "description", widget: "text" }
-
-  - name: "services"
-    label: "Usługi"
-    files:
-      - name: "services"
-        label: "Lista Usług"
-        file: "src/data/services.json"
-        fields:
-          - { label: "Tytuł", name: "title", widget: "string" }
-          - { label: "Podtytuł", name: "subtitle", widget: "text" }
-          - label: "Usługi"
-            name: "services"
-            widget: "list"
-            fields:
-              - { label: "Nazwa", name: "name", widget: "string" }
-              - { label: "Opis", name: "description", widget: "text" }
-              - { label: "Cena", name: "price", widget: "string" }
-              - { label: "Obraz", name: "image", widget: "image" }
-              - { label: "Wyróżniona", name: "featured", widget: "boolean", default: false }
-              - label: "Cechy"
-                name: "features"
-                widget: "list"
-                field: { label: "Cecha", name: "feature", widget: "string" }
-          - label: "Wezwanie do Działania"
-            name: "cta"
-            widget: "object"
-            fields:
-              - { label: "Tytuł", name: "title", widget: "string" }
-              - { label: "Opis", name: "description", widget: "text" }
-              - { label: "Tekst Przycisku", name: "button_text", widget: "string" }
-
-  - name: "gallery"
-    label: "Galeria"
-    files:
-      - name: "gallery"
-        label: "Obrazy Galerii"
-        file: "src/data/gallery.json"
-        fields:
-          - { label: "Tytuł", name: "title", widget: "string" }
-          - { label: "Podtytuł", name: "subtitle", widget: "text" }
-          - label: "Filtry"
-            name: "filters"
-            widget: "list"
-            fields:
-              - { label: "Klucz", name: "key", widget: "string" }
-              - { label: "Etykieta", name: "label", widget: "string" }
-          - label: "Obrazy"
-            name: "images"
-            widget: "list"
-            fields:
-              - { label: "Tytuł", name: "title", widget: "string" }
-              - { label: "Opis", name: "description", widget: "string" }
-              - { label: "Obraz", name: "image", widget: "image" }
-              - label: "Kategoria"
-                name: "category"
-                widget: "select"
-                options: ["retratos", "bodas", "familias"]
-          - label: "Wezwanie do Działania"
-            name: "cta"
-            widget: "object"
-            fields:
-              - { label: "Tekst", name: "text", widget: "string" }
-              - { label: "Tekst Przycisku", name: "button_text", widget: "string" }
-
-  - name: "contact"
-    label: "Kontakt"
-    files:
-      - name: "contact"
-        label: "Informacje Kontaktowe"
-        file: "src/data/contact.json"
-        fields:
-          - { label: "Tytuł", name: "title", widget: "string" }
-          - { label: "Podtytuł", name: "subtitle", widget: "text" }
-          - label: "Karty Kontaktowe"
-            name: "contact_cards"
-            widget: "list"
-            fields:
-              - { label: "Ikona", name: "icon", widget: "string" }
-              - { label: "Tytuł", name: "title", widget: "string" }
-              - { label: "Wartość", name: "value", widget: "string" }
-              - { label: "Link", name: "link", widget: "string", required: false }
-              - { label: "Tekst Linku", name: "link_text", widget: "string", required: false }
-              - { label: "Notatka", name: "note", widget: "string", required: false }
-          - label: "Media Społecznościowe"
-            name: "social"
-            widget: "object"
-            fields:
-              - { label: "Tytuł", name: "title", widget: "string" }
-              - label: "Linki"
-                name: "links"
-                widget: "list"
+collections_folder: "collections"
                 fields:
                   - { label: "Platforma", name: "platform", widget: "string" }
                   - { label: "URL", name: "url", widget: "string" }
