--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,106 +1,72 @@
-# Konfiguracja dla Netlify (produkcja)
 backend:
-  name: git-gateway # Używa Netlify Identity
-  branch: main # Gałąź produkcyjna
-  repo: AyrtonCR/carolinafotografia # Zastąp z twoim repo
+  name: git-gateway
+  branch: main
+  repo: AyrtonCR/carolinafotografia
 
-# Tryb publikacji: `simple` lub `editorial_workflow`
-# `editorial_workflow` pozwala na tworzenie borradores y revisiones.
-publish_mode: editorial_workflow
-
-# Adres URL twojego wdrożonego serwisu
+# Configuración del sitio
 site_url: https://karolinagfotografia.pl
 display_url: https://karolinagfotografia.pl
-
-# Logo wyświetlane w CMS
 logo_url: /image.png
 
-# Konfiguracja mediów
-media_folder: "public/images/uploads" # Przechowuj przesłane pliki tutaj
-public_folder: "/images/uploads" # Publiczna ścieżka do plików
+# Configuración de medios
+media_folder: "public/images/uploads"
+public_folder: "/images/uploads"
 
-# Konfiguracja edytora
+# Configuración del editor
 editor:
-  preview: true # Włącz podgląd na żywo
+  preview: true
 
-# Konfiguracja slug
+# Configuración de URL
 slug:
   encoding: "ascii"
   clean_accents: true
 
-# Konfiguracja języka
+# Configuración de idioma
 locale: 'pl'
 
-# Tłumaczenia interfejsu
 i18n:
   structure: multiple_folders
   locales: [pl]
   default_locale: pl
 
-collections_folder: "collections"
-                fields:
-                  - { label: "Platforma", name: "platform", widget: "string" }
-                  - { label: "URL", name: "url", widget: "string" }
-                  - { label: "Etykieta", name: "label", widget: "string" }
-          - label: "Formularz"
-            name: "form"
-            widget: "object"
-            fields:
-              - { label: "Tekst Przycisku", name: "button_text", widget: "string" }
-              - { label: "Tekst Ładowania", name: "button_loading", widget: "string" }
-              - { label: "Wiadomość Sukcesu", name: "success_message", widget: "text" }
-              - { label: "Wiadomość Błędu", name: "error_message", widget: "text" }
-
-  - name: "footer"
-    label: "Stopka"
+# Colecciones
+collections:
+  - name: "pages"
+    label: "Páginas"
     files:
-      - name: "footer"
-        label: "Informacje Stopki"
-        file: "src/data/footer.json"
+      - name: "home"
+        label: "Inicio"
+        file: "src/data/home.json"
         fields:
-          - label: "Marka"
-            name: "brand"
-            widget: "object"
-            fields:
-              - { label: "Nazwa", name: "name", widget: "string" }
-              - { label: "Opis", name: "description", widget: "text" }
-          - label: "Nawigacja"
-            name: "navigation"
-            widget: "object"
-            fields:
-              - { label: "Tytuł", name: "title", widget: "string" }
-              - label: "Linki"
-                name: "links"
-                widget: "list"
-                fields:
-                  - { label: "Link", name: "href", widget: "string" }
-                  - { label: "Etykieta", name: "label", widget: "string" }
-          - label: "Usługi"
-            name: "services"
-            widget: "object"
-            fields:
-              - { label: "Tytuł", name: "title", widget: "string" }
-              - label: "Elementy"
-                name: "items"
-                widget: "list"
-                field: { label: "Element", name: "item", widget: "string" }
-          - label: "Kontakt"
-            name: "contact"
-            widget: "object"
-            fields:
-              - { label: "Tytuł", name: "title", widget: "string" }
-              - label: "Elementy"
-                name: "items"
-                widget: "list"
-                fields:
-                  - { label: "Ikona", name: "icon", widget: "string" }
-                  - { label: "Tekst", name: "text", widget: "string" }
-                  - { label: "Link", name: "link", widget: "string", required: false }
-          - label: "Media Społecznościowe"
-            name: "social"
-            widget: "list"
-            fields:
-              - { label: "Platforma", name: "platform", widget: "string" }
-              - { label: "URL", name: "url", widget: "string" }
-              - { label: "Etykieta", name: "label", widget: "string" }
-          - { label: "Prawa Autorskie", name: "copyright", widget: "string" }
+          - { label: "Título", name: "title", widget: "string" }
+          - { label: "Descripción", name: "description", widget: "text" }
+          - { label: "Imagen de fondo", name: "hero_image", widget: "image" }
+          - { label: "Texto del botón", name: "button_text", widget: "string" }
+
+  - name: "blog"
+    label: "Blog"
+    folder: "src/content/blog"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    editor:
+      preview: true
+    fields:
+      - { label: "Título", name: "title", widget: "string" }
+      - { label: "Fecha", name: "date", widget: "datetime" }
+      - { label: "Imagen destacada", name: "image", widget: "image" }
+      - { label: "Contenido", name: "body", widget: "markdown" }
+      - { label: "Autor", name: "author", widget: "string" }
+      - { label: "Categorías", name: "categories", widget: "list" }
+      - { label: "Descripción", name: "description", widget: "text" }
+
+  - name: "gallery"
+    label: "Galería"
+    folder: "public/images/gallery"
+    media_folder: ""
+    public_folder: "/images/gallery"
+    create: true
+    fields:
+      - { label: "Título", name: "title", widget: "string" }
+      - { label: "Imagen", name: "image", widget: "image" }
+      - { label: "Categoría", name: "category", widget: "string" }
+      - { label: "Descripción", name: "description", widget: "text" }
