--- a/admin/config.yml
+++ b/admin/config.yml
@@ -31,42 +31,95 @@ i18n:
 
 # Colecciones
 collections:
-  - name: "pages"
-    label: "Páginas"
+  - name: "site_data"
+    label: "Configuración del Sitio"
     files:
-      - name: "home"
-        label: "Inicio"
-        file: "src/data/home.json"
+      - name: "hero"
+        label: "Sección Hero"
+        file: "src/data/hero.json"
+        fields:
+          - { label: "Título", name: "title", widget: "string" }
+          - { label: "Subtítulo", name: "subtitle", widget: "string" }
+          - { label: "Descripción", name: "description", widget: "text" }
+          - { label: "Imagen de fondo", name: "background_image", widget: "image" }
+          - { label: "Texto del botón", name: "button_text", widget: "string" }
+          - { label: "Enlace del botón", name: "button_link", widget: "string" }
+      
+      - name: "about"
+        label: "Acerca de"
+        file: "src/data/about.json"
         fields:
           - { label: "Título", name: "title", widget: "string" }
           - { label: "Descripción", name: "description", widget: "text" }
-          - { label: "Imagen de fondo", name: "hero_image", widget: "image" }
-          - { label: "Texto del botón", name: "button_text", widget: "string" }
-
-  - name: "blog"
-    label: "Blog"
-    folder: "src/content/blog"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    editor:
-      preview: true
-    fields:
-      - { label: "Título", name: "title", widget: "string" }
-      - { label: "Fecha", name: "date", widget: "datetime" }
-      - { label: "Imagen destacada", name: "image", widget: "image" }
-      - { label: "Contenido", name: "body", widget: "markdown" }
-      - { label: "Autor", name: "author", widget: "string" }
-      - { label: "Categorías", name: "categories", widget: "list" }
-      - { label: "Descripción", name: "description", widget: "text" }
-
-  - name: "gallery"
-    label: "Galería"
-    folder: "public/images/gallery"
-    media_folder: ""
-    public_folder: "/images/gallery"
-    create: true
-    fields:
-      - { label: "Título", name: "title", widget: "string" }
-      - { label: "Imagen", name: "image", widget: "image" }
-      - { label: "Categoría", name: "category", widget: "string" }
-      - { label: "Descripción", name: "description", widget: "text" }
+          - { label: "Imagen", name: "image", widget: "image" }
+      
+      - name: "services"
+        label: "Servicios"
+        file: "src/data/services.json"
+        fields:
+          - { label: "Título", name: "title", widget: "string" }
+          - label: "Lista de servicios"
+            name: "services"
+            widget: "list"
+            fields:
+              - { label: "Nombre", name: "name", widget: "string" }
+              - { label: "Descripción", name: "description", widget: "text" }
+              - { label: "Icono", name: "icon", widget: "string" }
+              - { label: "Precio", name: "price", widget: "string" }
+      
+      - name: "gallery"
+        label: "Galería"
+        file: "src/data/gallery.json"
+        fields:
+          - { label: "Título", name: "title", widget: "string" }
+          - label: "Imágenes"
+            name: "images"
+            widget: "list"
+            fields:
+              - { label: "Título", name: "title", widget: "string" }
+              - { label: "Imagen", name: "src", widget: "image" }
+              - { label: "Categoría", name: "category", widget: "string" }
+              - { label: "Descripción", name: "alt", widget: "string" }
+      
+      - name: "contact"
+        label: "Contacto"
+        file: "src/data/contact.json"
+        fields:
+          - { label: "Título", name: "title", widget: "string" }
+          - { label: "Descripción", name: "description", widget: "text" }
+          - { label: "Email", name: "email", widget: "string" }
+          - { label: "Teléfono", name: "phone", widget: "string" }
+          - { label: "Dirección", name: "address", widget: "text" }
+      
+      - name: "navigation"
+        label: "Navegación"
+        file: "src/data/navigation.json"
+        fields:
+          - label: "Enlaces de navegación"
+            name: "links"
+            widget: "list"
+            fields:
+              - { label: "Texto", name: "text", widget: "string" }
+              - { label: "URL", name: "url", widget: "string" }
+      
+      - name: "site"
+        label: "Configuración General"
+        file: "src/data/site.json"
+        fields:
+          - { label: "Título del sitio", name: "title", widget: "string" }
+          - { label: "Descripción", name: "description", widget: "text" }
+          - { label: "URL del sitio", name: "url", widget: "string" }
+          - { label: "Logo", name: "logo", widget: "image" }
+      
+      - name: "footer"
+        label: "Pie de página"
+        file: "src/data/footer.json"
+        fields:
+          - { label: "Texto de copyright", name: "copyright", widget: "string" }
+          - label: "Redes sociales"
+            name: "social"
+            widget: "list"
+            fields:
+              - { label: "Nombre", name: "name", widget: "string" }
+              - { label: "URL", name: "url", widget: "string" }
+              - { label: "Icono", name: "icon", widget: "string" }
