--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,94 +16,200 @@ slug:
 
 collections:
   - name: "site_content"
-    label: "Contenido del Sitio"
+    label: "Treść Strony"
     files:
-      - label: "Página Principal - Hero"
+      - label: "Strona Główna - Hero"
         name: "hero"
         file: "src/data/hero.json"
         fields:
-          - {label: "Título", name: "title", widget: "string"}
-          - {label: "Subtítulo", name: "subtitle", widget: "string"}
-          - {label: "Descripción", name: "description", widget: "text"}
-          - {label: "Imagen de fondo", name: "background_image", widget: "image"}
-          - {label: "Texto del botón", name: "button_text", widget: "string"}
-          - {label: "Enlace del botón", name: "button_link", widget: "string"}
+          - {label: "Tytuł", name: "title", widget: "string"}
+          - {label: "Akcent", name: "accent", widget: "string"}
+          - {label: "Opis", name: "description", widget: "text"}
+          - {label: "Obraz", name: "image", widget: "image"}
+          - {label: "Przycisk główny", name: "button_primary", widget: "string"}
+          - {label: "Przycisk drugorzędny", name: "button_secondary", widget: "string"}
       
-      - label: "Acerca de"
+      - label: "O mnie"
         name: "about"
         file: "src/data/about.json"
         fields:
-          - {label: "Título", name: "title", widget: "string"}
-          - {label: "Descripción", name: "description", widget: "text"}
-          - {label: "Imagen", name: "image", widget: "image"}
+          - {label: "Tytuł", name: "title", widget: "string"}
+          - {label: "Podtytuł", name: "subtitle", widget: "string"}
+          - {label: "Opis 1", name: "description1", widget: "text"}
+          - {label: "Opis 2", name: "description2", widget: "text"}
+          - {label: "Doświadczenie (lata)", name: "experience", widget: "number"}
+          - {label: "Obraz", name: "image", widget: "image"}
+          - label: "Umiejętności"
+            name: "skills"
+            widget: "list"
+            fields:
+              - {label: "Ikona", name: "icon", widget: "string"}
+              - {label: "Tytuł", name: "title", widget: "string"}
+              - {label: "Opis", name: "description", widget: "text"}
+          - {label: "Tekst przycisku", name: "button_text", widget: "string"}
       
-      - label: "Servicios"
+      - label: "Usługi"
         name: "services"
         file: "src/data/services.json"
         fields:
-          - {label: "Título", name: "title", widget: "string"}
-          - label: "Lista de servicios"
+          - {label: "Tytuł", name: "title", widget: "string"}
+          - {label: "Podtytuł", name: "subtitle", widget: "string"}
+          - label: "Lista usług"
             name: "services"
             widget: "list"
             fields:
-              - {label: "Nombre", name: "name", widget: "string"}
-              - {label: "Descripción", name: "description", widget: "text"}
-              - {label: "Icono", name: "icon", widget: "string"}
-              - {label: "Precio", name: "price", widget: "string"}
+              - {label: "Nazwa", name: "name", widget: "string"}
+              - {label: "Opis", name: "description", widget: "text"}
+              - {label: "Cena", name: "price", widget: "string"}
+              - {label: "Obraz", name: "image", widget: "image"}
+              - {label: "Wyróżniony", name: "featured", widget: "boolean"}
+              - label: "Funkcje"
+                name: "features"
+                widget: "list"
+                field: {label: "Funkcja", name: "feature", widget: "string"}
+          - label: "Wezwanie do działania"
+            name: "cta"
+            widget: "object"
+            fields:
+              - {label: "Tytuł", name: "title", widget: "string"}
+              - {label: "Opis", name: "description", widget: "text"}
+              - {label: "Tekst przycisku", name: "button_text", widget: "string"}
       
-      - label: "Galería"
+      - label: "Galeria"
         name: "gallery"
         file: "src/data/gallery.json"
         fields:
-          - {label: "Título", name: "title", widget: "string"}
-          - label: "Imágenes"
+          - {label: "Tytuł", name: "title", widget: "string"}
+          - {label: "Podtytuł", name: "subtitle", widget: "string"}
+          - label: "Filtry"
+            name: "filters"
+            widget: "list"
+            fields:
+              - {label: "Klucz", name: "key", widget: "string"}
+              - {label: "Etykieta", name: "label", widget: "string"}
+          - label: "Zdjęcia"
             name: "images"
             widget: "list"
             fields:
-              - {label: "Título", name: "title", widget: "string"}
-              - {label: "Imagen", name: "src", widget: "image"}
-              - {label: "Categoría", name: "category", widget: "string"}
-              - {label: "Descripción", name: "alt", widget: "string"}
+              - {label: "Tytuł", name: "title", widget: "string"}
+              - {label: "Opis", name: "description", widget: "string"}
+              - {label: "Obraz", name: "image", widget: "image"}
+              - {label: "Kategoria", name: "category", widget: "string"}
+          - label: "Wezwanie do działania"
+            name: "cta"
+            widget: "object"
+            fields:
+              - {label: "Tekst", name: "text", widget: "string"}
+              - {label: "Tekst przycisku", name: "button_text", widget: "string"}
       
-      - label: "Contacto"
+      - label: "Kontakt"
         name: "contact"
         file: "src/data/contact.json"
         fields:
-          - {label: "Título", name: "title", widget: "string"}
-          - {label: "Descripción", name: "description", widget: "text"}
-          - {label: "Email", name: "email", widget: "string"}
-          - {label: "Teléfono", name: "phone", widget: "string"}
-          - {label: "Dirección", name: "address", widget: "text"}
+          - {label: "Tytuł", name: "title", widget: "string"}
+          - {label: "Podtytuł", name: "subtitle", widget: "text"}
+          - label: "Karty kontaktowe"
+            name: "contact_cards"
+            widget: "list"
+            fields:
+              - {label: "Ikona", name: "icon", widget: "string"}
+              - {label: "Tytuł", name: "title", widget: "string"}
+              - {label: "Wartość", name: "value", widget: "string"}
+              - {label: "Link", name: "link", widget: "string", required: false}
+              - {label: "Tekst linku", name: "link_text", widget: "string", required: false}
+              - {label: "Notatka", name: "note", widget: "string", required: false}
+          - label: "Media społecznościowe"
+            name: "social"
+            widget: "object"
+            fields:
+              - {label: "Tytuł", name: "title", widget: "string"}
+              - label: "Linki"
+                name: "links"
+                widget: "list"
+                fields:
+                  - {label: "Platforma", name: "platform", widget: "string"}
+                  - {label: "URL", name: "url", widget: "string"}
+                  - {label: "Etykieta", name: "label", widget: "string"}
+          - label: "Formularz"
+            name: "form"
+            widget: "object"
+            fields:
+              - {label: "Tekst przycisku", name: "button_text", widget: "string"}
+              - {label: "Tekst ładowania", name: "button_loading", widget: "string"}
+              - {label: "Wiadomość sukcesu", name: "success_message", widget: "string"}
+              - {label: "Wiadomość błędu", name: "error_message", widget: "string"}
       
-      - label: "Navegación"
+      - label: "Nawigacja"
         name: "navigation"
         file: "src/data/navigation.json"
         fields:
-          - label: "Enlaces de navegación"
-            name: "links"
+          - {label: "Alt logo", name: "logo_alt", widget: "string"}
+          - label: "Elementy menu"
+            name: "menu_items"
             widget: "list"
             fields:
-              - {label: "Texto", name: "text", widget: "string"}
-              - {label: "URL", name: "url", widget: "string"}
+              - {label: "Href", name: "href", widget: "string"}
+              - {label: "Etykieta", name: "label", widget: "string"}
+          - {label: "Etykieta menu mobilnego", name: "mobile_menu_label", widget: "string"}
       
-      - label: "Configuración del Sitio"
+      - label: "Konfiguracja Strony"
         name: "site"
         file: "src/data/site.json"
         fields:
-          - {label: "Título del sitio", name: "title", widget: "string"}
-          - {label: "Descripción", name: "description", widget: "text"}
-          - {label: "URL del sitio", name: "url", widget: "string"}
+          - {label: "Tytuł strony", name: "title", widget: "string"}
+          - {label: "Opis", name: "description", widget: "text"}
+          - {label: "Email", name: "email", widget: "string"}
+          - {label: "Telefon", name: "phone", widget: "string"}
+          - {label: "Lokalizacja", name: "location", widget: "string"}
           - {label: "Logo", name: "logo", widget: "image"}
       
-      - label: "Pie de página"
+      - label: "Stopka"
         name: "footer"
         file: "src/data/footer.json"
         fields:
-          - {label: "Texto de copyright", name: "copyright", widget: "string"}
-          - label: "Redes sociales"
+          - label: "Marka"
+            name: "brand"
+            widget: "object"
+            fields:
+              - {label: "Nazwa", name: "name", widget: "string"}
+              - {label: "Opis", name: "description", widget: "text"}
+          - label: "Nawigacja"
+            name: "navigation"
+            widget: "object"
+            fields:
+              - {label: "Tytuł", name: "title", widget: "string"}
+              - label: "Linki"
+                name: "links"
+                widget: "list"
+                fields:
+                  - {label: "Href", name: "href", widget: "string"}
+                  - {label: "Etykieta", name: "label", widget: "string"}
+          - label: "Usługi"
+            name: "services"
+            widget: "object"
+            fields:
+              - {label: "Tytuł", name: "title", widget: "string"}
+              - label: "Elementy"
+                name: "items"
+                widget: "list"
+                field: {label: "Usługa", name: "service", widget: "string"}
+          - label: "Kontakt"
+            name: "contact"
+            widget: "object"
+            fields:
+              - {label: "Tytuł", name: "title", widget: "string"}
+              - label: "Elementy"
+                name: "items"
+                widget: "list"
+                fields:
+                  - {label: "Ikona", name: "icon", widget: "string"}
+                  - {label: "Tekst", name: "text", widget: "string"}
+                  - {label: "Link", name: "link", widget: "string", required: false}
+          - label: "Media społecznościowe"
             name: "social"
             widget: "list"
             fields:
-              - {label: "Nombre", name: "name", widget: "string"}
+              - {label: "Platforma", name: "platform", widget: "string"}
               - {label: "URL", name: "url", widget: "string"}
-              - {label: "Icono", name: "icon", widget: "string"}
+              - {label: "Etykieta", name: "label", widget: "string"}
+          - {label: "Tekst copyright", name: "copyright", widget: "string"}
