--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "astro": "^5.2.5",
-   
+    "netlify-identity-widget": "^1.9.2"
   },
   "devDependencies": {},
   "repository": {
